--- a/AULA1parte2.html
+++ b/AULA1parte2.html
@@ -1,13 +1,21 @@
 <html>
     <head>
+    <body style="background-color: rgb(200, 255, 0);">
+
+    </body>
         <tittle>
             pagina 2
         </tittle>
     </head>
     <body>
-    
+    <ol>
+        <li>teste1</li>
+        <li>teste2</li>
+    </ol>
         <h1>
             sou a pagina 2
+        <h1 style="background-color:rgb(0, 0, 0);color:rgb(255, 0, 255);font-size: 50px;">
+
         </h1>
         <a href="AULA1.html" target="_blank">
             voltar para a pagina 1
