--- a/AULA1parte2.html
+++ b/AULA1parte2.html
@@ -1,10 +1,27 @@
-<html>
+
+<html lang="pt-br">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" type="image/png" href="favicon-32x32.png">
+    </head>
     <body style="background-color: rgb(200, 255, 0);">
+        <h1 style="background-color:rgb(0, 0, 0);color:rgb(255, 0, 255);font-size: 50px;"> guizao e matheus 
+        <hr>
+        <p>
+            
+        </p>
+        <img src="guizao e mathues2.webp" width="19%" alt="essa imagem é o guizao e o matheus no seu dia mais hetero!" title="essa imagem é o guizao e o matheus no seu dia mais hetero!">
+        <img src="look-speeddddd-ronaldo-and-messi-kissing-o-v0-z2w54of0gd9e1.webp" width="25%" alt="essa imagem é o guizao e o matheus no seu dia mais hetero!" title="essa imagem é o guizao e o matheus no seu dia mais hetero!">
+        <ol>
+        <il><img src="images.png" width="8%"> <--time do matheus </il>
+            <br>
+        </il><img src="bandeira-arco-i]ris-uboms3aosu2a.webp" width="10%" alt="bandeira que o matheus apoia" title="bandeira que o matheus prudente apoia"> <--bandeira do matheus</il>
+        </ol>
+        <ul>
 
     </body>
         <tittle>
-            pagina 2
         </tittle>
     </head>
     <body>
@@ -13,9 +30,9 @@
         <li>teste2</li>
     </ol>
         <h1>
-            sou a pagina 2
+        
         <h1 style="background-color:rgb(0, 0, 0);color:rgb(255, 0, 255);font-size: 50px;">
-
+            sou a pagina 2
         </h1>
         <a href="AULA1.html" target="_blank">
             voltar para a pagina 1
