--- a/AULA1parte2.html
+++ b/AULA1parte2.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" type="image/png" href="favicon-32x32.png">
     </head>
-    <body style="background-color: rgb(200, 255, 0);">
+    <body style="background-color: rgb(200, 255, 0);margin: 0; padding: 0; height: 100vh; display: grid;">
         <h1 style="background-color:rgb(0, 0, 0);color:rgb(255, 0, 255);font-size: 50px;"> guizao e matheus 
         <hr>
         <p>
