--- a/AULA1parte2.html
+++ b/AULA1parte2.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" type="image/png" href="favicon-32x32.png">
+        <link rel="icon" type="image/png" href="imagens/favicon-32x32.png">
     </head>
     <body style="background-color: rgb(200, 255, 0);margin: 0; padding: 0; height: 100vh; display: grid;">
         <h1 style="background-color:rgb(0, 0, 0);color:rgb(255, 0, 255);font-size: 50px;"> guizao e matheus 
@@ -11,12 +11,12 @@
         <p>
             
         </p>
-        <img src="guizao e mathues2.webp" width="19%" alt="essa imagem é o guizao e o matheus no seu dia mais hetero!" title="essa imagem é o guizao e o matheus no seu dia mais hetero!">
-        <img src="look-speeddddd-ronaldo-and-messi-kissing-o-v0-z2w54of0gd9e1.webp" width="25%" alt="essa imagem é o guizao e o matheus no seu dia mais hetero!" title="essa imagem é o guizao e o matheus no seu dia mais hetero!">
+        <img src="imagens/guizao e mathues2.webp" width="19%" alt="essa imagem é o guizao e o matheus no seu dia mais hetero!" title="essa imagem é o guizao e o matheus no seu dia mais hetero!">
+        <img src="imagens/look-speeddddd-ronaldo-and-messi-kissing-o-v0-z2w54of0gd9e1.webp" width="25%" alt="essa imagem é o guizao e o matheus no seu dia mais hetero!" title="essa imagem é o guizao e o matheus no seu dia mais hetero!">
         <ol>
-        <il><img src="images.png" width="8%"> <--time do matheus </il>
+        <il><img src="imagens/images.png" width="8%"> <--time do matheus </il>
             <br>
-        </il><img src="bandeira-arco-i]ris-uboms3aosu2a.webp" width="10%" alt="bandeira que o matheus apoia" title="bandeira que o matheus prudente apoia"> <--bandeira do matheus</il>
+        </il><img src="imagens/bandeira-arco-i]ris-uboms3aosu2a.webp" width="10%" alt="bandeira que o matheus apoia" title="bandeira que o matheus prudente apoia"> <--bandeira do matheus</il>
         </ol>
         <ul>
 
