--- a/estilo_externo.html
+++ b/estilo_externo.html
@@ -4,32 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" type="image/png" href="imagens/favicon-32x32.png">
+        <link rel="stylesheet" href="estilo.css" />
     </head>
-    <style>
-      body{        
-        background-color: rgb(0, 0, 0);
-        border: 30px solid rgb(70, 65, 65);
-        margin: 0; 
-        padding: 0; 
-        height: 100vh; 
-        display: grid;
-      }
-      div{
-        background-color: black;
-      }
-      h1{
-        background-color:rgb(0, 0, 0);
-        color:rgb(255, 0, 255);
-        font-size: 50px;        
-      }
-      a{
-        font-size: 50px;
-      }
-      
-    </style>
 <body>
   <div>
-    <h1> guizao e matheus - CSS Interno no Site</h1> 
+    <h1> guizao e matheus - CSS no arquivo externo</h1> 
     <hr>       
     <img src="imagens/imagem.jpeg" width="50%" alt="essa imagem é o guizao e o matheus no seu dia mais hetero!" title="essa imagem é o guizao e o matheus no seu dia mais hetero!">
     <ul>
