--- a/estilo_externo.html
+++ b/estilo_externo.html
@@ -8,9 +8,13 @@
     </head>
 <body>
   <div>
-    <h1> guizao e matheus - CSS no arquivo externo</h1> 
+    <div class="titulo">
+      <h1> guizao e matheus - CSS no arquivo externo</h1> 
+    </div> 
+    <div class="imagens"
     <hr>       
     <img src="imagens/imagem.jpeg" width="50%" alt="essa imagem é o guizao e o matheus no seu dia mais hetero!" title="essa imagem é o guizao e o matheus no seu dia mais hetero!">
+    </div>
     <ul>
       <li><a href="https://www.youtube.com/shorts/T0yUB4OasWM" target="_blank">
         Video Do Goat
@@ -21,7 +25,7 @@
         Sou A Pagina 2
       </a>
     </li>
-    
+  </hr>
     </ul>    
   </div>
 
