--- a/AULA1parte2.html
+++ b/AULA1parte2.html
@@ -34,7 +34,7 @@
         <h1 style="background-color:rgb(0, 0, 0);color:rgb(255, 0, 255);font-size: 50px;">
             sou a pagina 2
         </h1>
-        <a href="AULA1.html" target="_blank">
+        <a href="estilo_externo.html" target="_blank">
             voltar para a pagina 1
         </a>
     </body>
