--- a/estilo_externo.html
+++ b/estilo_externo.html
@@ -11,8 +11,8 @@
     <div class="titulo">
       <h1> guizao e matheus - CSS no arquivo externo</h1> 
     </div> 
-    <div class="imagens"
-    <hr>       
+    <div class="imagens">
+    <hr/>       
     <img src="imagens/imagem.jpeg" width="50%" alt="essa imagem é o guizao e o matheus no seu dia mais hetero!" title="essa imagem é o guizao e o matheus no seu dia mais hetero!">
     </div>
     <ul>
