--- a/index.html
+++ b/index.html
@@ -7,11 +7,8 @@
         <link rel="stylesheet" href="estilo.css" />
     </head>
 <body>   
-    <div class="imagem 1">
-    <ul>
-      <li><img src="imagens/pngwing.com.png" width="100px"></li>
-    </ul>
-    <p></p>
+    <div class="cartao">   </div>
+    <div class="imagem-box"> </div>
     <ul>
       <li><a href="https://www.youtube.com/shorts/T0yUB4OasWM" target="_blank"></a>
     </hr>
