--- a/FLEXBOX/aula do flexbox.html
+++ b/FLEXBOX/aula do flexbox.html
@@ -44,17 +44,21 @@
             <p>time do matheus</p>
         </section>
     </main>
+
     <article class="artigos">
         <section class="secao secao1">
-            1
+            <img src="../imagens/">
+            <p>teste 1</p>
         </section>  
-
         <section class="secao secao2">
-            2
-        </section>
-
+            <section class="cont cont1">
+                <img src="../imagens/">
+                <p>teste 2</p>
+            </section>
         <section class="secao secao3">
-            3
+            <section class="cont cont3">
+                <img src="../imagens/">
+                <p>teste 3</p>
         </section>
 
     </article>
